// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Modal AutoOpen play-test 1`] = `
<div data-test-block="true">
  <header class>
    <div id="topbanner-focus-target"
         class="_srOnly_1ns8f_118"
         tabindex="-1"
    >
    </div>
    <a href="main"
       class="_skipLink_nmfvk_1"
    >
      <span class="_skipLinkContent_nmfvk_22">
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_nmfvk_45"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_containerForMainMenu_1ns8f_55">
      <div class="_topContainer_1ns8f_6">
        <a class="_logoContainer_1u6ee_1 _logoAsLink_1u6ee_13"
           href="https://www.skatteetaten.no/"
        >
          <img class="_logo_1u6ee_1"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
        </a>
        <div class="_contentContainer_1ns8f_23">
          <div class="_container_1uqc5_5">
            <div class>
            </div>
            <button class="_button_2n6jz_1  _menuButton_1uqc5_17"
                    lang="nb"
                    aria-expanded="false"
                    type="button"
            >
              <span class="_iconWrapper_1uqc5_85">
                <span class="_flagIcon_1uqc5_90">
                  <svg xmlns="http://www.w3.org/2000/svg"
                       aria-hidden="true"
                       viewbox="0 0 1100 800"
                       class="_flagIconSvg_1uqc5_95"
                  >
                    <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                          style="fill: rgb(255, 255, 255);"
                    >
                    </path>
                    <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                          style="fill: rgb(239, 43, 45);"
                    >
                    </path>
                    <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                          style="fill: rgb(0, 40, 104);"
                    >
                    </path>
                  </svg>
                </span>
                <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowMobile_1uqc5_98"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m7 10 5 5 5-5H7Z">
                  </path>
                </svg>
              </span>
              Bokmål
              <span class="_srOnly_1uqc5_180">
                &nbsp;Meny
              </span>
              <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowDesktop_1uqc5_106"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="m7 10 5 5 5-5H7Z">
                </path>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div class="_separator_1ns8f_32">
        <div class="_separatorRight_1ns8f_45">
        </div>
        <div class="_separatorLeft_1ns8f_37">
        </div>
      </div>
    </div>
  </header>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Denne testen skal sjekke om fokus blir satt på skjult div-element når modalen lukkes.
        Testes ved å reloade siden. Det er ved programatisk åpning av modalen at fokus tidligere ikke har blitt satt korrekt.
  </p>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r18:"
          data-variant="plain"
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r19:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r19:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r18:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal ref.current.showModal
    </span>
  </button>
</div>
`;

exports[`Tester/Modal AutoOpenAndCloseOnEscape play-test 1`] = `
<div data-test-block="true">
  <header class>
    <div id="topbanner-focus-target"
         class="_srOnly_1ns8f_118"
         tabindex="-1"
    >
    </div>
    <a href="main"
       class="_skipLink_nmfvk_1"
    >
      <span class="_skipLinkContent_nmfvk_22">
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_nmfvk_45"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_containerForMainMenu_1ns8f_55">
      <div class="_topContainer_1ns8f_6">
        <a class="_logoContainer_1u6ee_1 _logoAsLink_1u6ee_13"
           href="https://www.skatteetaten.no/"
        >
          <img class="_logo_1u6ee_1"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
        </a>
        <div class="_contentContainer_1ns8f_23">
          <div class="_container_1uqc5_5">
            <div class>
            </div>
            <button class="_button_2n6jz_1  _menuButton_1uqc5_17"
                    lang="nb"
                    aria-expanded="false"
                    type="button"
            >
              <span class="_iconWrapper_1uqc5_85">
                <span class="_flagIcon_1uqc5_90">
                  <svg xmlns="http://www.w3.org/2000/svg"
                       aria-hidden="true"
                       viewbox="0 0 1100 800"
                       class="_flagIconSvg_1uqc5_95"
                  >
                    <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                          style="fill: rgb(255, 255, 255);"
                    >
                    </path>
                    <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                          style="fill: rgb(239, 43, 45);"
                    >
                    </path>
                    <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                          style="fill: rgb(0, 40, 104);"
                    >
                    </path>
                  </svg>
                </span>
                <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowMobile_1uqc5_98"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m7 10 5 5 5-5H7Z">
                  </path>
                </svg>
              </span>
              Bokmål
              <span class="_srOnly_1uqc5_180">
                &nbsp;Meny
              </span>
              <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowDesktop_1uqc5_106"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="m7 10 5 5 5-5H7Z">
                </path>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div class="_separator_1ns8f_32">
        <div class="_separatorRight_1ns8f_45">
        </div>
        <div class="_separatorLeft_1ns8f_37">
        </div>
      </div>
    </div>
  </header>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Denne testen skal sjekke om fokus blir satt på skjult div-element når modalen lukkes etter at bruker har trykket på Escape-knappen.
        Modalen åpnes ved å laste siden på nytt.
  </p>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r1e:"
          data-variant="outline"
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1f:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1f:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r1e:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Modalinnhold
        </p>
      </div>
    </div>
  </dialog>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne med klikk
    </span>
  </button>
</div>
`;

exports[`Tester/Modal AutoOpenAndCloseOnUserInput smoke-test 1`] = `
<div data-test-block="true">
  <header class>
    <div id="topbanner-focus-target"
         class="_srOnly_1ns8f_118"
         tabindex="-1"
    >
    </div>
    <a href="main"
       class="_skipLink_nmfvk_1"
    >
      <span class="_skipLinkContent_nmfvk_22">
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_nmfvk_45"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_containerForMainMenu_1ns8f_55">
      <div class="_topContainer_1ns8f_6">
        <a class="_logoContainer_1u6ee_1 _logoAsLink_1u6ee_13"
           href="https://www.skatteetaten.no/"
        >
          <img class="_logo_1u6ee_1"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
        </a>
        <div class="_contentContainer_1ns8f_23">
          <div class="_container_1uqc5_5">
            <div class>
            </div>
            <button class="_button_2n6jz_1  _menuButton_1uqc5_17"
                    lang="nb"
                    aria-expanded="false"
                    type="button"
            >
              <span class="_iconWrapper_1uqc5_85">
                <span class="_flagIcon_1uqc5_90">
                  <svg xmlns="http://www.w3.org/2000/svg"
                       aria-hidden="true"
                       viewbox="0 0 1100 800"
                       class="_flagIconSvg_1uqc5_95"
                  >
                    <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                          style="fill: rgb(255, 255, 255);"
                    >
                    </path>
                    <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                          style="fill: rgb(239, 43, 45);"
                    >
                    </path>
                    <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                          style="fill: rgb(0, 40, 104);"
                    >
                    </path>
                  </svg>
                </span>
                <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowMobile_1uqc5_98"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m7 10 5 5 5-5H7Z">
                  </path>
                </svg>
              </span>
              Bokmål
              <span class="_srOnly_1uqc5_180">
                &nbsp;Meny
              </span>
              <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _arrowDesktop_1uqc5_106"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="m7 10 5 5 5-5H7Z">
                </path>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div class="_separator_1ns8f_32">
        <div class="_separatorRight_1ns8f_45">
        </div>
        <div class="_separatorLeft_1ns8f_37">
        </div>
      </div>
    </div>
  </header>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Denne testen skal sjekke om fokus blir satt på skjult div-element når modalen lukkes etter at bruker har trykket på Escape-knappen.
        Modalen åpnes ved å laste siden på nytt.
  </p>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r1k:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1l:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1l:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r1k:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Modalinnhold
        </p>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            Lukk modal
          </span>
        </button>
      </div>
    </div>
  </dialog>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne med klikk
    </span>
  </button>
</div>
`;

exports[`Tester/Modal ClickCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:ri:"
          data-variant="outline"
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rj:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rj:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:ri:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal Defaults play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r2:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r2:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal VariantPlain play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r4:"
          data-variant="plain"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r4:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog id="htmlId"
          class="_modal_i27cp_5 dummyClassname"
          lang="nb"
          data-testid="123ID"
          aria-labelledby="modalHeadingId-:r0:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r0:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoClose play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rk:"
          data-variant="outline"
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rl:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rl:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rk:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoCloseDisabled play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rm:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rn:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rn:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rm:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithFormValidationFocusRetention play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r1m:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1n:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1n:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r1m:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <div class="_wrapper_1dg5q_1">
          <label id="labelId-:r1r:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r1p:"
          >
            Navn (minst 3 tegn)
          </label>
          <input id="textFieldTextboxId-:r1p:"
                 class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
                 data-variant="medium"
                 autocomplete="off"
                 aria-describedby="textFieldErrorId-:r1o:"
                 aria-invalid="true"
          >
          <div id="textFieldErrorId-:r1o:"
               aria-live="assertive"
               aria-atomic="true"
          >
            <div class="_errorMessage_1ycvu_15">
              <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
                </path>
              </svg>
              <p class="_errorMessageText_1ycvu_32">
                Navnet må være minst 3 tegn
              </p>
            </div>
          </div>
        </div>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            Lukk
          </span>
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithHideTitle play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:ro:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rp:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rp:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:ro:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26  _srOnly_i27cp_68"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithIcon play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r8:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r9:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r9:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <div>
          <svg class="_systemIcon_o38m2_2 _systemIcon_extraLarge_o38m2_25"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2 1 21h22L12 2Zm0 4 7.53 13H4.47L12 6Zm-1 4v4h2v-4h-2Zm0 6v2h2v-2">
            </path>
          </svg>
        </div>
        <h1 id="modalHeadingId-:r8:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithImage play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r6:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <img alt="Image alt tekst"
           class="_modalIllustration_i27cp_32"
           src="[REMOVED]"
      >
      <div class="_modalPaddingL_i27cp_48 _modalNoPaddingTop_i27cp_54">
        <h1 id="modalHeadingId-:r6:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithPadding play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:re:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rf:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rf:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingNONE_i27cp_39">
        <h1 id="modalHeadingId-:re:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <modal-customelement>
  </modal-customelement>
</div>
`;

exports[`Tester/Modal WithStateChangeAndFocus play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rs:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rt:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rt:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rs:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithStateChangeAndTextFieldFocus play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:ru:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rv:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rv:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:ru:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <div class="_wrapper_1dg5q_1">
          <label id="labelId-:r13:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r11:"
          >
            Navn
          </label>
          <input id="textFieldTextboxId-:r11:"
                 class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
                 data-variant="medium"
                 autocomplete="off"
          >
          <div id="textFieldErrorId-:r10:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithTransparentBackground play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rb:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rc:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rc:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rb:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithVerticalScrolling play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rg:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rh:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rh:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rg:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithoutCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:rd:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:rd:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;
